--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 20 14:40:32 BDT 2017
-ndk.dir=E\:\\Files\\J_CENA_X64FRE_EN-US_DV5\\ECLIPSE\\sdk\\ndk-bundle
-sdk.dir=E\:\\Files\\J_CENA_X64FRE_EN-US_DV5\\ECLIPSE\\sdk
+#Thu Jul 20 16:29:25 BDT 2017
+ndk.dir=F\:\\SDK\\ndk-bundle
+sdk.dir=F\:\\SDK
